--- a/manifest.plist
+++ b/manifest.plist
@@ -23,7 +23,7 @@
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https</string>
+					<string>https://github.com/jimmypod96/app/raw/master/Apps/%E6%82%A0%E6%B8%B8%E6%BC%94%E7%A4%BA.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
