--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/jimmypod96/app/raw/master/Apps/%E6%82%A0%E6%B8%B8%E6%BC%94%E7%A4%BA.ipa</string>
+					<string>https://github.com/jimmypod96/app/raw/master/Apps/悠游演示.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
