--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/jimmypod96/app/master/Apps/悠游演示.ipa</string>
+					<string>https://raw.githubusercontent.com/jimmypod96/app/master/Apps/PJA.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
